--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   ],
   "author": "Pedro Gutiérrez",
   "license": "MIT",
+  "dependencies": {
+    "ipfs-http-client": "^30.1.0"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
