--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project tsconfig.json",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "test:watch": "npm run test -- --watch --watch-extensions ts"
   },
   "keywords": [
     "ipfs",
@@ -19,10 +20,12 @@
   "author": "Pedro Gutiérrez",
   "license": "MIT",
   "dependencies": {
+    "glob": "^7.1.3",
     "ipfs-http-client": "^30.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.3",
     "chai": "^4.2.0",
