--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
     "typescript": "^3.3.3333"
   }
 }
