Create initial CLI.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "files": [
-    "src/index.ts"
+    "src/index.ts",
+    "src/ipfs-website-deployer-cli.ts"
   ]
 }
