--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Simple IPFS website deployer.",
   "main": "dist/index.js",
+  "bin": {
+    "ipfs-website-deployer": "dist/ipfs-website-deployer-cli.js"
+  },
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project tsconfig.json",
@@ -20,6 +23,7 @@
   "author": "Pedro Gutiérrez",
   "license": "MIT",
   "dependencies": {
+    "commander": "^2.19.0",
     "glob": "^7.1.3",
     "ipfs-http-client": "^30.1.0"
   },
