--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Pedro Gutiérrez",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.3.3",
     "commander": "^2.19.0",
     "glob": "^7.1.3",
     "ipfs-http-client": "^30.1.0"
