--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "colors": "^1.3.3",
     "commander": "^2.19.0",
     "glob": "^7.1.3",
-    "ipfs-http-client": "^30.1.0"
+    "ipfs-http-client": "^30.1.0",
+    "ts-progress": "^0.1.7"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
