Refactor and clean the project

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "tslint src/**/*.ts",
     "test": "mocha --timeout 10000 -r ts-node/register src/**/*.spec.ts",
     "test:watch": "npm run test -- --watch --watch-extensions ts"
   },
