--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,6 +60,7 @@
   },
   "files": [
     "src/index.ts",
-    "src/ipfs-website-deployer-cli.ts"
+    "src/ipfs-website-deployer-cli.ts",
+    "src/**/*.spec.ts"
   ]
 }
